# toyterm

./: .gitignore  Cargo.toml  LICENSE  README.md  config.toml  settings.toml  toyterm.info
.github/workflows/: ci.yml
sixel/: Cargo.toml
sixel/src/: lib.rs  parser.rs
src/: basics.rs  cache.rs  cell.frag  cell.vert  clipboard.rs  config.rs  control_function.rs  font.rs  image.frag  image.vert  input.rs  lib.rs  main.rs  multiplexer.rs  pipe_channel.rs  sixel.rs  terminal.rs  toyterm.cap  toyterm.info  utils.rs  view.rs  window.rs
src/shaders/: cell.frag  cell.vert
src/terminal/: buffer.rs  cell_style.rs  control.rs  emulator.rs  mod.rs  parser.rs  pty.rs  render.rs  term.rs
tests/: clear.sh  line_break.sh  sgr.sh
