[package]
name = "toyterm"
version = "0.1.0"
authors = ["algon-320 <algon.0320@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { version = "0.4.0", features = ["release_max_level_warn"] }
env_logger = "0.8.3"
anyhow = "1.0"
nix = "0.20.0"
config = "0.10.1"
lazy_static = "1.4.0"
ucd = "0.1.1"
fontconfig = "0.2.0"
sixel = {path = "./sixel"}
sdl2 = { version = "0.34.3", default-features = false, features = ["ttf", "unsafe_textures"] }
