[package]
name = "toyterm"
version = "0.2.0"
authors = ["algon-320 <algon.0320@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { version = "0.4.17", features = ["release_max_level_warn"] }
env_logger = "0.9.0"
nix = "0.24.1"
unicode-width = "0.1.9"
glium = "0.31.0"
freetype-rs = "0.30.1"
x11-clipboard = "0.6.1"
